@@ -33,634 +33,642 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class TrainingServiceImpl implements TrainingService {
 
-    TrainingExerciseRepository trainingExerciseRepository;
+        TrainingExerciseRepository trainingExerciseRepository;
 
-    TrainingPlanRepository trainingPlanRepository;
+        TrainingPlanRepository trainingPlanRepository;
 
-    TrainingScheduleRepository trainingScheduleRepository;
+        TrainingScheduleRepository trainingScheduleRepository;
 
-    EquipmentRepository equipmentRepository;
+        EquipmentRepository equipmentRepository;
 
-    GoalRepository goalRepository;
+        GoalRepository goalRepository;
 
-    LevelRepository levelRepository;
+        LevelRepository levelRepository;
 
-    LocationRepository locationRepository;
+        LocationRepository locationRepository;
 
-    TargetMuscleRepository targetMuscleRepository;
+        TargetMuscleRepository targetMuscleRepository;
 
-    TypeRepository typeRepository;
+        TypeRepository typeRepository;
 
-    TrainingExerciseMapper trainingExerciseMapper;
+        TrainingExerciseMapper trainingExerciseMapper;
 
-    TrainingPlanMapper trainingPlanMapper;
+        TrainingPlanMapper trainingPlanMapper;
 
-    TrainingScheduleMapper trainingScheduleMapper;
+        TrainingScheduleMapper trainingScheduleMapper;
 
-    EquipmentMapper equipmentMapper;
+        EquipmentMapper equipmentMapper;
 
-    GoalMapper goalMapper;
+        GoalMapper goalMapper;
 
-    LevelMapper levelMapper;
+        LevelMapper levelMapper;
 
-    LocationMapper locationMapper;
+        LocationMapper locationMapper;
 
-    TargetMuscleMapper targetMuscleMapper;
+        TargetMuscleMapper targetMuscleMapper;
 
-    TypeMapper typeMapper;
+        TypeMapper typeMapper;
 
-    @Override
-    public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByPrimaryMuscle(
-            String primaryMuscle,
-            PaginationRequestDto paginationRequestDto) {
-        Long beginner = 1L;
-        Long intermediate = 2L;
-        Long advanced = 3L;
+        @Override
+        public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByPrimaryMuscle(
+                        String primaryMuscle,
+                        PaginationRequestDto paginationRequestDto) {
+                Long beginner = 1L;
+                Long intermediate = 2L;
+                Long advanced = 3L;
 
-        List<TrainingExercise> beginnerExercises = trainingExerciseRepository
-                .findByLevels_IdAndPrimaryMuscles_Id(
-                        beginner,
-                        StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
+                List<TrainingExercise> beginnerExercises = trainingExerciseRepository
+                                .findByLevels_IdAndPrimaryMuscles_Id(
+                                                beginner,
+                                                StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
 
-        List<TrainingExercise> intermediateExercises = trainingExerciseRepository
-                .findByLevels_IdAndPrimaryMuscles_Id(
-                        intermediate,
-                        StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
+                List<TrainingExercise> intermediateExercises = trainingExerciseRepository
+                                .findByLevels_IdAndPrimaryMuscles_Id(
+                                                intermediate,
+                                                StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
 
-        List<TrainingExercise> advancedExercises = trainingExerciseRepository
-                .findByLevels_IdAndPrimaryMuscles_Id(
-                        advanced,
-                        StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
+                List<TrainingExercise> advancedExercises = trainingExerciseRepository
+                                .findByLevels_IdAndPrimaryMuscles_Id(
+                                                advanced,
+                                                StringToTrainingIDHelper.TargetMuscle.toId(primaryMuscle));
 
-        List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
+                List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Beginner"))
-                .toList());
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Beginner"))
+                                .toList());
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Intermediate"))
-                .toList());
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Intermediate"))
+                                .toList());
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Advanced"))
-                .toList());
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Advanced"))
+                                .toList());
 
-        int pageNum = paginationRequestDto.getPageNum() + 1;
-        int pageSize = paginationRequestDto.getPageSize();
+                int pageNum = paginationRequestDto.getPageNum() + 1;
+                int pageSize = paginationRequestDto.getPageSize();
 
-        int start = (pageNum - 1) * pageSize;
-        int end = Math.min(start + pageSize, allExercises.size());
+                int start = (pageNum - 1) * pageSize;
+                int end = Math.min(start + pageSize, allExercises.size());
 
-        if (start >= allExercises.size()) {
-            return List.of();
+                if (start >= allExercises.size()) {
+                        return List.of();
+                }
+
+                List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+
+                Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
+                                .stream()
+                                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+
+                List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+
+                for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
+                        if (groupedByLevel.containsKey(level)) {
+                                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
+                                                groupedByLevel.get(level)));
+                        }
+                }
+
+                return response;
         }
 
-        List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+        @Override
+        public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByType(
+                        String type,
+                        PaginationRequestDto paginationRequestDto) {
+                Long beginner = 1L;
+                Long intermediate = 2L;
+                Long advanced = 3L;
 
-        Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
-                .stream()
-                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+                List<TrainingExercise> beginnerExercises = trainingExerciseRepository
+                                .findByLevels_IdAndTypes_Id(
+                                                beginner,
+                                                StringToTrainingIDHelper.Type.toId(type));
 
-        List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+                List<TrainingExercise> intermediateExercises = trainingExerciseRepository
+                                .findByLevels_IdAndTypes_Id(
+                                                intermediate,
+                                                StringToTrainingIDHelper.Type.toId(type));
 
-        for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
-            if (groupedByLevel.containsKey(level)) {
-                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
-                        groupedByLevel.get(level)));
-            }
+                List<TrainingExercise> advancedExercises = trainingExerciseRepository
+                                .findByLevels_IdAndTypes_Id(
+                                                advanced,
+                                                StringToTrainingIDHelper.Type.toId(type));
+
+                List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
+
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Beginner"))
+                                .toList());
+
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Intermediate"))
+                                .toList());
+
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Advanced"))
+                                .toList());
+
+                int pageNum = paginationRequestDto.getPageNum() + 1;
+                int pageSize = paginationRequestDto.getPageSize();
+
+                int start = (pageNum - 1) * pageSize;
+                int end = Math.min(start + pageSize, allExercises.size());
+
+                if (start >= allExercises.size()) {
+                        return List.of();
+                }
+
+                List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+
+                Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
+                                .stream()
+                                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+
+                List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+
+                for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
+                        if (groupedByLevel.containsKey(level)) {
+                                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
+                                                groupedByLevel.get(level)));
+                        }
+                }
+
+                return response;
         }
 
-        return response;
-    }
+        @Override
+        public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByGoal(
+                        String goal,
+                        PaginationRequestDto paginationRequestDto) {
+                Long beginner = 1L;
+                Long intermediate = 2L;
+                Long advanced = 3L;
 
-    @Override
-    public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByType(
-            String type,
-            PaginationRequestDto paginationRequestDto) {
-        Long beginner = 1L;
-        Long intermediate = 2L;
-        Long advanced = 3L;
+                List<TrainingExercise> beginnerExercises = trainingExerciseRepository
+                                .findByLevels_IdAndGoals_Id(
+                                                beginner,
+                                                StringToTrainingIDHelper.Goal.toId(goal));
 
-        List<TrainingExercise> beginnerExercises = trainingExerciseRepository
-                .findByLevels_IdAndTypes_Id(
-                        beginner,
-                        StringToTrainingIDHelper.Type.toId(type));
+                List<TrainingExercise> intermediateExercises = trainingExerciseRepository
+                                .findByLevels_IdAndGoals_Id(
+                                                intermediate,
+                                                StringToTrainingIDHelper.Goal.toId(goal));
 
-        List<TrainingExercise> intermediateExercises = trainingExerciseRepository
-                .findByLevels_IdAndTypes_Id(
-                        intermediate,
-                        StringToTrainingIDHelper.Type.toId(type));
+                List<TrainingExercise> advancedExercises = trainingExerciseRepository
+                                .findByLevels_IdAndGoals_Id(
+                                                advanced,
+                                                StringToTrainingIDHelper.Goal.toId(goal));
 
-        List<TrainingExercise> advancedExercises = trainingExerciseRepository
-                .findByLevels_IdAndTypes_Id(
-                        advanced,
-                        StringToTrainingIDHelper.Type.toId(type));
+                List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
 
-        List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Beginner"))
+                                .toList());
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Beginner"))
-                .toList());
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Intermediate"))
+                                .toList());
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Intermediate"))
-                .toList());
+                allExercises.addAll(trainingExerciseMapper
+                                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
+                                .stream()
+                                .peek(dto -> dto.setLevelName("Advanced"))
+                                .toList());
 
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Advanced"))
-                .toList());
+                int pageNum = paginationRequestDto.getPageNum() + 1;
+                int pageSize = paginationRequestDto.getPageSize();
 
-        int pageNum = paginationRequestDto.getPageNum() + 1;
-        int pageSize = paginationRequestDto.getPageSize();
+                int start = (pageNum - 1) * pageSize;
+                int end = Math.min(start + pageSize, allExercises.size());
 
-        int start = (pageNum - 1) * pageSize;
-        int end = Math.min(start + pageSize, allExercises.size());
+                if (start >= allExercises.size()) {
+                        return List.of();
+                }
 
-        if (start >= allExercises.size()) {
-            return List.of();
+                List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+
+                Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
+                                .stream()
+                                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+
+                List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+
+                for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
+                        if (groupedByLevel.containsKey(level)) {
+                                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
+                                                groupedByLevel.get(level)));
+                        }
+                }
+
+                return response;
         }
 
-        List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+        @Override
+        public PaginationResponseDto<TrainingExerciseResponseDto> getAllExercise(
+                        PaginationRequestDto paginationRequestDto) {
 
-        Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
-                .stream()
-                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+                Pageable pageable = PageRequest.of(paginationRequestDto.getPageNum(),
+                                paginationRequestDto.getPageSize());
 
-        List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+                Page<TrainingExercise> exercisesPage = trainingExerciseRepository.findAll(pageable);
 
-        for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
-            if (groupedByLevel.containsKey(level)) {
-                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
-                        groupedByLevel.get(level)));
-            }
+                List<TrainingExerciseResponseDto> exercises = exercisesPage.getContent()
+                                .stream()
+                                .map(trainingExerciseMapper::trainingExerciseToTrainingExerciseResponseDto)
+                                .collect(Collectors.toList());
+
+                PagingMeta pagingMeta = new PagingMeta(
+                                exercisesPage.getTotalElements(),
+                                exercisesPage.getTotalPages(),
+                                paginationRequestDto.getPageNum() + 1,
+                                paginationRequestDto.getPageSize(),
+                                null,
+                                null);
+
+                return new PaginationResponseDto<>(pagingMeta, exercises);
         }
 
-        return response;
-    }
+        @Override
+        public List<Long> searchTrainingPlanDynamic(TrainingDynamicSearchingRequestDto request) {
+                boolean hasLevelFilter = !request.getLevels().isEmpty();
+                boolean hasLocationFilter = !request.getLocations().isEmpty();
+                boolean hasEquipmentFilter = !request.getEquipments().isEmpty();
+                boolean hasGoalFilter = request.getGoal() != null && !request.getGoal().isEmpty();
 
-    @Override
-    public List<TrainingExerciseLevelPreviewResponseDto> getPreviewExerciseByGoal(
-            String goal,
-            PaginationRequestDto paginationRequestDto) {
-        Long beginner = 1L;
-        Long intermediate = 2L;
-        Long advanced = 3L;
-
-        List<TrainingExercise> beginnerExercises = trainingExerciseRepository
-                .findByLevels_IdAndGoals_Id(
-                        beginner,
-                        StringToTrainingIDHelper.Goal.toId(goal));
-
-        List<TrainingExercise> intermediateExercises = trainingExerciseRepository
-                .findByLevels_IdAndGoals_Id(
-                        intermediate,
-                        StringToTrainingIDHelper.Goal.toId(goal));
-
-        List<TrainingExercise> advancedExercises = trainingExerciseRepository
-                .findByLevels_IdAndGoals_Id(
-                        advanced,
-                        StringToTrainingIDHelper.Goal.toId(goal));
-
-        List<TrainingExercisePreviewResponseDto> allExercises = new ArrayList<>();
-
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(beginnerExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Beginner"))
-                .toList());
-
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(intermediateExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Intermediate"))
-                .toList());
-
-        allExercises.addAll(trainingExerciseMapper
-                .listTrainingExerciseToListTrainingExercisePreviewResponseDto(advancedExercises)
-                .stream()
-                .peek(dto -> dto.setLevelName("Advanced"))
-                .toList());
-
-        int pageNum = paginationRequestDto.getPageNum() + 1;
-        int pageSize = paginationRequestDto.getPageSize();
-
-        int start = (pageNum - 1) * pageSize;
-        int end = Math.min(start + pageSize, allExercises.size());
-
-        if (start >= allExercises.size()) {
-            return List.of();
+                return trainingExerciseRepository.searchDynamicTrainingPlan(
+                                request.getSearchSentence(),
+                                request.getLevels(),
+                                request.getLocations(),
+                                request.getEquipments(),
+                                request.getGoal(),
+                                hasLevelFilter,
+                                hasLocationFilter,
+                                hasEquipmentFilter,
+                                hasGoalFilter);
         }
 
-        List<TrainingExercisePreviewResponseDto> pagedExercises = allExercises.subList(start, end);
+        @Override
+        public List<TrainingExercisePreviewResponseDto> searchTrainingExerciseDynamic(
+                        TrainingDynamicSearchingRequestDto request) {
+                boolean hasLevelFilter = !request.getLevels().isEmpty();
+                boolean hasLocationFilter = !request.getLocations().isEmpty();
+                boolean hasEquipmentFilter = !request.getEquipments().isEmpty();
+                boolean hasGoalFilter = request.getGoal() != null && !request.getGoal().isEmpty();
 
-        Map<String, List<TrainingExercisePreviewResponseDto>> groupedByLevel = pagedExercises
-                .stream()
-                .collect(Collectors.groupingBy(TrainingExercisePreviewResponseDto::getLevelName));
+                List<Long> l = new ArrayList<>();
+                l.add(switch (request.getGoal()) {
+                        case "Lose weight, Lose fat" -> 1L;
+                        case "Gain weight" -> 2L;
+                        case "Gain muscle" -> 3L;
+                        case "Maintain body" -> 4L;
+                        case "Increase endurance" -> 5L;
+                        case "Improve cardiovascular" -> 6L;
+                        case "Stress relief/relaxation" -> 7L;
+                        case "Increase height" -> 8L;
+                        default -> 0L;
+                });
 
-        List<TrainingExerciseLevelPreviewResponseDto> response = new ArrayList<>();
+                List<Long> exerciseResponseSearch = trainingExerciseRepository.searchDynamicTrainingExercise(
+                                request.getSearchSentence(),
+                                request.getLevels(),
+                                request.getLocations(),
+                                request.getEquipments(),
+                                l,
+                                hasLevelFilter,
+                                hasLocationFilter,
+                                hasEquipmentFilter,
+                                hasGoalFilter);
 
-        for (String level : List.of("Beginner", "Intermediate", "Advanced")) {
-            if (groupedByLevel.containsKey(level)) {
-                response.add(new TrainingExerciseLevelPreviewResponseDto(level,
-                        groupedByLevel.get(level)));
-            }
+                List<TrainingExercisePreviewResponseDto> exercisePreviewResponse = new ArrayList<>();
+                for (Long responseSearch : exerciseResponseSearch) {
+                        exercisePreviewResponse.add(
+                                        trainingExerciseMapper.trainingExerciseToTrainingExercisePreviewResponseDto(
+                                                        trainingExerciseRepository.findById(responseSearch)
+                                                                        .orElseThrow(() -> new VsException(
+                                                                                        HttpStatus.BAD_REQUEST,
+                                                                                        ErrorMessage.Training.ERR_EXERCISE_NOT_EXISTS))));
+                }
+
+                return exercisePreviewResponse;
         }
 
-        return response;
-    }
+        @Override
+        public PaginationResponseDto<TrainingExerciseResponseDto> searchTrainingExercise(
+                        TrainingExerciseSearchingRequestDto request,
+                        PaginationRequestDto paginationRequestDto) {
 
-    @Override
-    public PaginationResponseDto<TrainingExerciseResponseDto> getAllExercise(PaginationRequestDto paginationRequestDto) {
+                List<TrainingExerciseResponseDto> result;
 
-        Pageable pageable = PageRequest.of(paginationRequestDto.getPageNum(), paginationRequestDto.getPageSize());
+                Pageable pageable = PageRequest.of(
+                                paginationRequestDto.getPageNum(),
+                                paginationRequestDto.getPageSize());
 
-        Page<TrainingExercise> exercisesPage = trainingExerciseRepository.findAll(pageable);
+                Page<TrainingExercise> trainingExercisesPage = trainingExerciseRepository
+                                .findByNameContainingIgnoreCase(
+                                                request.getSearchSentence(),
+                                                pageable);
 
-        List<TrainingExerciseResponseDto> exercises = exercisesPage.getContent()
-                .stream()
-                .map(trainingExerciseMapper::trainingExerciseToTrainingExerciseResponseDto)
-                .collect(Collectors.toList());
+                result = trainingExercisesPage.getContent()
+                                .stream()
+                                .map(trainingExerciseMapper::trainingExerciseToTrainingExerciseResponseDto)
+                                .filter(Objects::nonNull)
+                                .toList();
 
-        PagingMeta pagingMeta = new PagingMeta(
-                exercisesPage.getTotalElements(),
-                exercisesPage.getTotalPages(),
-                paginationRequestDto.getPageNum() + 1,
-                paginationRequestDto.getPageSize(),
-                null,
-                null);
+                PagingMeta pagingMeta = new PagingMeta(
+                                trainingExercisesPage.getTotalElements(),
+                                trainingExercisesPage.getTotalPages(),
+                                paginationRequestDto.getPageNum() + 1,
+                                paginationRequestDto.getPageSize(),
+                                null,
+                                null);
 
-        return new PaginationResponseDto<>(pagingMeta, exercises);
-    }
+                return new PaginationResponseDto<>(pagingMeta, result);
 
-    @Override
-    public List<Long> searchTrainingPlanDynamic(TrainingDynamicSearchingRequestDto request) {
-        boolean hasLevelFilter = !request.getLevels().isEmpty();
-        boolean hasLocationFilter = !request.getLocations().isEmpty();
-        boolean hasEquipmentFilter = !request.getEquipments().isEmpty();
-        boolean hasGoalFilter = request.getGoal() != null && !request.getGoal().isEmpty();
-
-        return trainingExerciseRepository.searchDynamicTrainingPlan(
-                request.getSearchSentence(),
-                request.getLevels(),
-                request.getLocations(),
-                request.getEquipments(),
-                request.getGoal(),
-                hasLevelFilter,
-                hasLocationFilter,
-                hasEquipmentFilter,
-                hasGoalFilter
-        );
-    }
-
-    @Override
-    public List<TrainingExercisePreviewResponseDto> searchTrainingExerciseDynamic(TrainingDynamicSearchingRequestDto request) {
-        boolean hasLevelFilter = !request.getLevels().isEmpty();
-        boolean hasLocationFilter = !request.getLocations().isEmpty();
-        boolean hasEquipmentFilter = !request.getEquipments().isEmpty();
-        boolean hasGoalFilter = request.getGoal() != null && !request.getGoal().isEmpty();
-
-        List<Long> l = new ArrayList<>();
-        l.add(switch (request.getGoal()) {
-            case "Lose weight, Lose fat" -> 1L;
-            case "Gain weight" -> 2L;
-            case "Gain muscle" -> 3L;
-            case "Maintain body" -> 4L;
-            case "Increase endurance" -> 5L;
-            case "Improve cardiovascular" -> 6L;
-            case "Stress relief/relaxation" -> 7L;
-            case "Increase height" -> 8L;
-            default -> 0L;
-        });
-
-        List<Long> exerciseResponseSearch = trainingExerciseRepository.searchDynamicTrainingExercise(
-                request.getSearchSentence(),
-                request.getLevels(),
-                request.getLocations(),
-                request.getEquipments(),
-                l,
-                hasLevelFilter,
-                hasLocationFilter,
-                hasEquipmentFilter,
-                hasGoalFilter
-        );
-
-        List<TrainingExercisePreviewResponseDto> exercisePreviewResponse = new ArrayList<>();
-        for (Long responseSearch : exerciseResponseSearch) {
-            exercisePreviewResponse.add(trainingExerciseMapper.trainingExerciseToTrainingExercisePreviewResponseDto(
-                    trainingExerciseRepository.findById(responseSearch)
-                            .orElseThrow(() -> new VsException(
-                                    HttpStatus.BAD_REQUEST,
-                                    ErrorMessage.Training.ERR_EXERCISE_NOT_EXISTS))
-            ));
         }
 
-        return exercisePreviewResponse;
-    }
+        @Override
+        public TrainingExerciseResponseDto getTrainingExerciseById(Long id) {
+                TrainingExercise trainingExercise = trainingExerciseRepository.findById(id)
+                                .orElseThrow(() -> new VsException(
+                                                HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_EXERCISE_NOT_EXISTS));
 
-    @Override
-    public PaginationResponseDto<TrainingExerciseResponseDto> searchTrainingExercise(
-            TrainingExerciseSearchingRequestDto request,
-            PaginationRequestDto paginationRequestDto) {
+                return trainingExerciseMapper.trainingExerciseToTrainingExerciseResponseDto(trainingExercise);
+        }
 
-        List<TrainingExerciseResponseDto> result;
+        @Override
+        public PaginationResponseDto<TrainingPlanResponseDto> getTrainingPlans(
+                        PaginationRequestDto paginationRequestDto) {
+                Pageable pageable = PageRequest.of(
+                                paginationRequestDto.getPageNum(),
+                                paginationRequestDto.getPageSize());
 
-        Pageable pageable = PageRequest.of(
-                paginationRequestDto.getPageNum(),
-                paginationRequestDto.getPageSize());
+                Page<TrainingPlan> trainingPage = trainingPlanRepository.findAll(pageable);
 
-        Page<TrainingExercise> trainingExercisesPage = trainingExerciseRepository
-                .findByNameContainingIgnoreCase(
-                        request.getSearchSentence(),
-                        pageable);
+                List<TrainingPlanResponseDto> trainingPlanResponseDtos = trainingPage.getContent()
+                                .stream()
+                                .map(trainingPlanMapper::trainingPlanToTrainingPlanResponseDto)
+                                .toList();
 
-        result = trainingExercisesPage.getContent()
-                .stream()
-                .map(trainingExerciseMapper::trainingExerciseToTrainingExerciseResponseDto)
-                .filter(Objects::nonNull)
-                .toList();
+                PagingMeta pagingMeta = new PagingMeta(
+                                trainingPage.getTotalElements(),
+                                trainingPage.getTotalPages(),
+                                paginationRequestDto.getPageNum() + 1,
+                                paginationRequestDto.getPageSize(),
+                                null,
+                                null);
 
-        PagingMeta pagingMeta = new PagingMeta(
-                trainingExercisesPage.getTotalElements(),
-                trainingExercisesPage.getTotalPages(),
-                paginationRequestDto.getPageNum() + 1,
-                paginationRequestDto.getPageSize(),
-                null,
-                null);
+                return new PaginationResponseDto<>(pagingMeta, trainingPlanResponseDtos);
+        }
 
-        return new PaginationResponseDto<>(pagingMeta, result);
+        @Override
+        public PaginationResponseDto<EquipmentResponseDto> getEquipments(PaginationRequestDto request) {
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-    }
+                Page<Equipment> equipmentPage = equipmentRepository.findAll(pageable);
 
-    @Override
-    public TrainingExerciseResponseDto getTrainingExerciseById(Long id) {
-        TrainingExercise trainingExercise = trainingExerciseRepository.findById(id)
-                .orElseThrow(() -> new VsException(
-                        HttpStatus.BAD_REQUEST,
-                        ErrorMessage.Training.ERR_EXERCISE_NOT_EXISTS));
+                List<EquipmentResponseDto> equipmentResponseDtos = equipmentPage.getContent()
+                                .stream()
+                                .map(equipmentMapper::equipmentToEquipmentResponseDto)
+                                .toList();
 
-        return trainingExerciseMapper.trainingExerciseToTrainingExerciseResponseDto(trainingExercise);
-    }
+                PagingMeta pagingMeta = new PagingMeta(
+                                equipmentPage.getTotalElements(),
+                                equipmentPage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null,
+                                null);
 
-    @Override
-    public PaginationResponseDto<TrainingPlanResponseDto> getTrainingPlans(
-            PaginationRequestDto paginationRequestDto) {
-        Pageable pageable = PageRequest.of(
-                paginationRequestDto.getPageNum(),
-                paginationRequestDto.getPageSize());
+                return new PaginationResponseDto<>(pagingMeta, equipmentResponseDtos);
+        }
 
-        Page<TrainingPlan> trainingPage = trainingPlanRepository.findAll(pageable);
+        @Override
+        public PaginationResponseDto<GoalResponseDto> getGoals(PaginationRequestDto request) {
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-        List<TrainingPlanResponseDto> trainingPlanResponseDtos = trainingPage.getContent()
-                .stream()
-                .map(trainingPlanMapper::trainingPlanToTrainingPlanResponseDto)
-                .toList();
+                Page<Goal> goalPage = goalRepository.findAll(pageable);
 
-        PagingMeta pagingMeta = new PagingMeta(
-                trainingPage.getTotalElements(),
-                trainingPage.getTotalPages(),
-                paginationRequestDto.getPageNum() + 1,
-                paginationRequestDto.getPageSize(),
-                null,
-                null);
+                List<GoalResponseDto> goalResponseDtos = goalPage.getContent()
+                                .stream()
+                                .map(goalMapper::goalToGoalResponseDto)
+                                .toList();
 
-        return new PaginationResponseDto<>(pagingMeta, trainingPlanResponseDtos);
-    }
+                PagingMeta pagingMeta = new PagingMeta(
+                                goalPage.getTotalElements(),
+                                goalPage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null,
+                                null);
 
-    @Override
-    public PaginationResponseDto<EquipmentResponseDto> getEquipments(PaginationRequestDto request) {
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+                return new PaginationResponseDto<>(pagingMeta, goalResponseDtos);
+        }
 
-        Page<Equipment> equipmentPage = equipmentRepository.findAll(pageable);
+        @Override
+        public PaginationResponseDto<LevelResponseDto> getLevels(PaginationRequestDto request) {
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-        List<EquipmentResponseDto> equipmentResponseDtos = equipmentPage.getContent()
-                .stream()
-                .map(equipmentMapper::equipmentToEquipmentResponseDto)
-                .toList();
+                Page<Level> levelPage = levelRepository.findAll(pageable);
 
-        PagingMeta pagingMeta = new PagingMeta(
-                equipmentPage.getTotalElements(),
-                equipmentPage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null,
-                null);
+                List<LevelResponseDto> levelResponseDtos = levelPage.getContent()
+                                .stream()
+                                .map(levelMapper::levelToLevelResponseDto)
+                                .toList();
 
-        return new PaginationResponseDto<>(pagingMeta, equipmentResponseDtos);
-    }
+                PagingMeta pagingMeta = new PagingMeta(
+                                levelPage.getTotalElements(),
+                                levelPage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null, null);
 
-    @Override
-    public PaginationResponseDto<GoalResponseDto> getGoals(PaginationRequestDto request) {
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+                return new PaginationResponseDto<>(pagingMeta, levelResponseDtos);
+        }
 
-        Page<Goal> goalPage = goalRepository.findAll(pageable);
+        @Override
+        public PaginationResponseDto<LocationResponseDto> getLocations(PaginationRequestDto request) {
 
-        List<GoalResponseDto> goalResponseDtos = goalPage.getContent()
-                .stream()
-                .map(goalMapper::goalToGoalResponseDto)
-                .toList();
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-        PagingMeta pagingMeta = new PagingMeta(
-                goalPage.getTotalElements(),
-                goalPage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null,
-                null);
+                Page<Location> locationPage = locationRepository.findAll(pageable);
 
-        return new PaginationResponseDto<>(pagingMeta, goalResponseDtos);
-    }
+                List<LocationResponseDto> locationResponseDtos = locationPage.getContent()
+                                .stream().map(locationMapper::locationToLocationResponseDto)
+                                .toList();
 
-    @Override
-    public PaginationResponseDto<LevelResponseDto> getLevels(PaginationRequestDto request) {
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+                PagingMeta pagingMeta = new PagingMeta(
+                                locationPage.getTotalElements(),
+                                locationPage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null, null);
 
-        Page<Level> levelPage = levelRepository.findAll(pageable);
+                return new PaginationResponseDto<>(pagingMeta, locationResponseDtos);
 
-        List<LevelResponseDto> levelResponseDtos = levelPage.getContent()
-                .stream()
-                .map(levelMapper::levelToLevelResponseDto)
-                .toList();
+        }
 
-        PagingMeta pagingMeta = new PagingMeta(
-                levelPage.getTotalElements(),
-                levelPage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null, null);
+        @Override
+        public PaginationResponseDto<TargetMuscleResponseDto> getTargetMuscles(PaginationRequestDto request) {
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-        return new PaginationResponseDto<>(pagingMeta, levelResponseDtos);
-    }
+                Page<TargetMuscle> targetMusclePage = targetMuscleRepository.findAll(pageable);
 
-    @Override
-    public PaginationResponseDto<LocationResponseDto> getLocations(PaginationRequestDto request) {
+                List<TargetMuscleResponseDto> targetMuscleResponseDtos = targetMusclePage.getContent()
+                                .stream()
+                                .map(targetMuscleMapper::targetMuscleToTargetMuscleResponseDto)
+                                .toList();
 
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+                PagingMeta pagingMeta = new PagingMeta(
+                                targetMusclePage.getTotalElements(),
+                                targetMusclePage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null,
+                                null);
 
-        Page<Location> locationPage = locationRepository.findAll(pageable);
+                return new PaginationResponseDto<>(pagingMeta, targetMuscleResponseDtos);
+        }
 
-        List<LocationResponseDto> locationResponseDtos = locationPage.getContent()
-                .stream().map(locationMapper::locationToLocationResponseDto)
-                .toList();
+        @Override
+        public PaginationResponseDto<TypeResponseDto> getTypes(PaginationRequestDto request) {
+                Pageable pageable = PageRequest.of(
+                                request.getPageNum(),
+                                request.getPageSize());
 
-        PagingMeta pagingMeta = new PagingMeta(
-                locationPage.getTotalElements(),
-                locationPage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null, null);
+                Page<Type> typePage = typeRepository.findAll(pageable);
 
-        return new PaginationResponseDto<>(pagingMeta, locationResponseDtos);
+                List<TypeResponseDto> typeResponseDtos = typePage.getContent()
+                                .stream()
+                                .map(typeMapper::typeToTypeResponseDto)
+                                .toList();
 
-    }
+                PagingMeta pagingMeta = new PagingMeta(
+                                typePage.getTotalElements(),
+                                typePage.getTotalPages(),
+                                request.getPageNum() + 1,
+                                request.getPageSize(),
+                                null,
+                                null);
 
-    @Override
-    public PaginationResponseDto<TargetMuscleResponseDto> getTargetMuscles(PaginationRequestDto request) {
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+                return new PaginationResponseDto<>(pagingMeta, typeResponseDtos);
+        }
 
-        Page<TargetMuscle> targetMusclePage = targetMuscleRepository.findAll(pageable);
+        @Override
+        public TypeResponseDto getTypeById(Long id) {
+                Type type = typeRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_TYPE_NOT_EXISTS));
+                return typeMapper.typeToTypeResponseDto(type);
+        }
 
-        List<TargetMuscleResponseDto> targetMuscleResponseDtos = targetMusclePage.getContent()
-                .stream()
-                .map(targetMuscleMapper::targetMuscleToTargetMuscleResponseDto)
-                .toList();
+        @Override
+        public TargetMuscleResponseDto getTargetMuscleById(Long id) {
+                TargetMuscle targetMuscle = targetMuscleRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_TARGET_MUSCLE_NOT_EXISTS));
+                return targetMuscleMapper.targetMuscleToTargetMuscleResponseDto(targetMuscle);
+        }
 
-        PagingMeta pagingMeta = new PagingMeta(
-                targetMusclePage.getTotalElements(),
-                targetMusclePage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null,
-                null);
+        @Override
+        public TrainingPlanResponseDto getTrainingPlanById(Long id) {
+                TrainingPlan trainingPlan = trainingPlanRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_TRAINING_PLAN_NOT_EXISTS));
+                return trainingPlanMapper.trainingPlanToTrainingPlanResponseDto(trainingPlan);
+        }
 
-        return new PaginationResponseDto<>(pagingMeta, targetMuscleResponseDtos);
-    }
+        @Override
+        public LocationResponseDto getLocationById(Long id) {
+                Location location = locationRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_LOCATION_NOT_EXISTS));
+                return locationMapper.locationToLocationResponseDto(location);
+        }
 
-    @Override
-    public PaginationResponseDto<TypeResponseDto> getTypes(PaginationRequestDto request) {
-        Pageable pageable = PageRequest.of(
-                request.getPageNum(),
-                request.getPageSize());
+        @Override
+        public LevelResponseDto getLevelById(Long id) {
+                Level level = levelRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_LEVEL_NOT_EXISTS));
+                return levelMapper.levelToLevelResponseDto(level);
+        }
 
-        Page<Type> typePage = typeRepository.findAll(pageable);
+        @Override
+        public GoalResponseDto getGoalById(Long id) {
+                Goal goal = goalRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_GOAL_NOT_EXISTS));
+                return goalMapper.goalToGoalResponseDto(goal);
+        }
 
-        List<TypeResponseDto> typeResponseDtos = typePage.getContent()
-                .stream()
-                .map(typeMapper::typeToTypeResponseDto)
-                .toList();
+        @Override
+        public EquipmentResponseDto getEquipmentById(Long id) {
+                Equipment equipment = equipmentRepository.findById(id)
+                                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST,
+                                                ErrorMessage.Training.ERR_EQUIPMENT_NOT_EXISTS));
+                return equipmentMapper.equipmentToEquipmentResponseDto(equipment);
+        }
 
-        PagingMeta pagingMeta = new PagingMeta(
-                typePage.getTotalElements(),
-                typePage.getTotalPages(),
-                request.getPageNum() + 1,
-                request.getPageSize(),
-                null,
-                null);
+        @Override
+        public TrainingScheduleResponseDto getTrainingSchedule(Long planId) {
+                return trainingScheduleMapper
+                                .trainingScheduleToTrainingScheduleResponseDto(
+                                                trainingScheduleRepository.findByTrainingPlan_Id(planId));
+        }
 
-        return new PaginationResponseDto<>(pagingMeta, typeResponseDtos);
-    }
+        @Override
+        public PaginationResponseDto<TrainingPlanResponseDto> getTrainingPlanByType(String type,
+                        PaginationRequestDto paginationRequestDto) {
+                Pageable pageable = PageRequest.of(
+                                paginationRequestDto.getPageNum(),
+                                paginationRequestDto.getPageSize());
 
-    @Override
-    public TypeResponseDto getTypeById(Long id) {
-        Type type = typeRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_TYPE_NOT_EXISTS));
-        return typeMapper.typeToTypeResponseDto(type);
-    }
+                Page<TrainingPlan> trainingPage = trainingPlanRepository.findByType(type, pageable);
 
-    @Override
-    public TargetMuscleResponseDto getTargetMuscleById(Long id) {
-        TargetMuscle targetMuscle = targetMuscleRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_TARGET_MUSCLE_NOT_EXISTS));
-        return targetMuscleMapper.targetMuscleToTargetMuscleResponseDto(targetMuscle);
-    }
+                List<TrainingPlanResponseDto> trainingPlanResponseDtos = trainingPage.getContent()
+                                .stream()
+                                .map(trainingPlanMapper::trainingPlanToTrainingPlanResponseDto)
+                                .toList();
 
-    @Override
-    public TrainingPlanResponseDto getTrainingPlanById(Long id) {
-        TrainingPlan trainingPlan = trainingPlanRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_TRAINING_PLAN_NOT_EXISTS));
-        return trainingPlanMapper.trainingPlanToTrainingPlanResponseDto(trainingPlan);
-    }
+                PagingMeta pagingMeta = new PagingMeta(
+                                trainingPage.getTotalElements(),
+                                trainingPage.getTotalPages(),
+                                paginationRequestDto.getPageNum() + 1,
+                                paginationRequestDto.getPageSize(),
+                                null,
+                                null);
 
-    @Override
-    public LocationResponseDto getLocationById(Long id) {
-        Location location = locationRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_LOCATION_NOT_EXISTS));
-        return locationMapper.locationToLocationResponseDto(location);
-    }
-
-    @Override
-    public LevelResponseDto getLevelById(Long id) {
-        Level level = levelRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_LEVEL_NOT_EXISTS));
-        return levelMapper.levelToLevelResponseDto(level);
-    }
-
-    @Override
-    public GoalResponseDto getGoalById(Long id) {
-        Goal goal = goalRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_GOAL_NOT_EXISTS));
-        return goalMapper.goalToGoalResponseDto(goal);
-    }
-
-    @Override
-    public EquipmentResponseDto getEquipmentById(Long id) {
-        Equipment equipment = equipmentRepository.findById(id)
-                .orElseThrow(() -> new VsException(HttpStatus.BAD_REQUEST, ErrorMessage.Training.ERR_EQUIPMENT_NOT_EXISTS));
-        return equipmentMapper.equipmentToEquipmentResponseDto(equipment);
-    }
-
-    @Override
-    public TrainingScheduleResponseDto getTrainingSchedule(Long planId) {
-        return trainingScheduleMapper
-                .trainingScheduleToTrainingScheduleResponseDto(
-                        trainingScheduleRepository.findByTrainingPlan_Id(planId));
-    }
-
-    @Override
-    public PaginationResponseDto<TrainingPlanResponseDto> getTrainingPlanByType(String type,
-                                                                                PaginationRequestDto paginationRequestDto) {
-        Pageable pageable = PageRequest.of(
-                paginationRequestDto.getPageNum(),
-                paginationRequestDto.getPageSize());
-
-        Page<TrainingPlan> trainingPage = trainingPlanRepository.findByType(type, pageable);
-
-        List<TrainingPlanResponseDto> trainingPlanResponseDtos = trainingPage.getContent()
-                .stream()
-                .map(trainingPlanMapper::trainingPlanToTrainingPlanResponseDto)
-                .toList();
-
-        PagingMeta pagingMeta = new PagingMeta(
-                trainingPage.getTotalElements(),
-                trainingPage.getTotalPages(),
-                paginationRequestDto.getPageNum() + 1,
-                paginationRequestDto.getPageSize(),
-                null,
-                null);
-
-        return new PaginationResponseDto<>(pagingMeta, trainingPlanResponseDtos);
-    }
+                return new PaginationResponseDto<>(pagingMeta, trainingPlanResponseDtos);
+        }
 
 }
